# dbglue

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE.txt  README.md  pyproject.toml
src/dbglue/: __about__.py  cli.py  output.py  pkeys.py  types.py  urls.py  version.py
src/sa_table_copy/: __init__.py  cli.py  meta.py  options.py  urls.py  version.py
