[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbglue"
dynamic = ["version"]
description = 'Copy data between databases given their URLs'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nahuel Defossé", email = "nahuel.deofsse@ibm.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["SQLAlchemy>=2", "click>=8", "pydantic>=2", "rich", "loguru", "psycopg2-binary"]

[project.optional-dependencies]
dev = [
  "pdbpp",
  "hunter",
  "ipython",
]


[project.urls]
Documentation = "https://github.com/Nahuel Defossé/dbglue#readme"
Issues = "https://github.com/Nahuel Defossé/dbglue/issues"
Source = "https://github.com/Nahuel Defossé/dbglue"

[project.scripts]
dbglue = "dbglue.cli:group"

[tool.hatch.version]
path = "src/dbglue/__about__.py"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dbglue tests}"

[tool.coverage.run]
source_pkgs = ["dbglue", "tests"]
branch = true
parallel = true
omit = [
  "src/dbglue/__about__.py",
]

[tool.coverage.paths]
dbglue = ["src/dbglue", "*/dbglue/src/dbglue"]
tests = ["tests", "*/dbglue/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
